documentation improvements